# cpp-googletest-ubuntu

./: .codecov.yml  .travis.yml  CMakeLists.txt  README.md
src/: Rectangle.cpp  Rectangle.h  Shape.cpp  Shape.h  Square.cpp  Square.h  main.cpp  utils.cpp  utils.h
test/: CMakeLists.txt  ResctangleTest.cpp  SquareTest.cpp  utilsTest.cpp
